--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./conf:/app/conf
 
   valkey:
-    image: valkey/valkey:latest
+    image: valkey/valkey:8-alpine
     ports:
       - "6379:6379"
 
